# Protein-Location-Predictor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.en.md  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.sh
.cache/: auto_batch_size.json
.github/workflows/: ci.yaml
benchmarks/deeploc/: README.md
config/: base_config.yaml  data_sources.yaml  model_config.yaml  training_config.yaml
configs/: base.yaml  inference.yaml  training.yaml
configs/hardware/: gpu_profiles.yaml
reports/: evaluation_report.json  evaluation_report.txt  per_class_metrics.csv  sprint-6-comparison.md
reports/baselines/: linear_probe.json  xgboost_baseline.json
reports/benchmarks/: deeploc.json
scripts/: batch_predict.py  download_data.py  run_pipeline.sh
src/: __init__.py  app.py  bio_features.py  data_processing.py  dataset.py  embedding_generator.py  explainability.py  feature_engineering.py  hybrid_model.py  inference_engine.py  model.py  train.py  train_hybrid.py
src/baselines/: __init__.py  deeploc_benchmark.py  embedding_cache.py  linear_probe.py  xgboost_baseline.py
src/data/: aux_targets.py  datasets.py  download.py  downloaders.py  external_features.py  processing.py  samplers.py  splitters.py  splitting.py  validation.py
src/evaluation/: ablation_harness.py  calibration.py  comparison_report.py  metrics.py  per_organism.py  threshold_tuning.py
src/features/: biophysical.py  signal_peptide.py  transmembrane.py
src/models/: classifier_head.py  esm_lora.py  lightning_module.py  losses.py  pooling.py  sdpa_patch.py
src/serving/: app.py  chunking.py  predictor.py  schemas.py
src/training/: auto_batch_size.py  callbacks.py  runtime_fingerprint.py  train.py
src/utils/: config.py  config_schema.py  hardware.py  logging.py  memory_utils.py  reproducibility.py
tests/: conftest.py
tests/integration/: test_api.py  test_end_to_end_smoke.py
tests/unit/: test_ablation_harness.py  test_aux_targets.py  test_balanced_sampler.py  test_biophysical.py  test_calibration.py  test_callbacks.py  test_chunk.py  test_classifier_head.py  test_comparison_report.py  test_components.py  test_config.py  test_config_schema.py  test_datasets.py  test_deeploc_benchmark.py  test_download.py  test_esm_lora.py  test_esm_lora_quantization.py  test_external_features.py  test_hardware.py  test_lightning_module.py  test_linear_probe.py  test_logging.py  test_losses.py  test_metrics.py  test_pooling.py  test_predictor.py  test_processing.py  test_reproducibility.py  test_runtime_fingerprint.py  test_samplers.py  test_schemas.py  test_sdpa_patch.py  test_signal_peptide.py  test_splitting.py  test_train.py  test_transmembrane.py  test_validation.py  test_xgboost_baseline.py
