[project]
name = "protein-location-predictor"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.25.0",
    "biopython>=1.81",
    "black>=23.11.0",
    "captum>=0.6.0",
    "click>=8.1.0",
    "fastapi>=0.104.0",
    "flake8>=6.1.0",
    "graph-part>=1.0.0",
    "isort>=5.12.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "mlflow>=2.8.0",
    "mypy>=1.7.0",
    "numpy>=1.24.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "optimum>=1.14.0",
    "pandas>=2.0.0",
    "peft>=0.7.0",
    "plotly>=5.17.0",
    "pydantic>=2.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pytorch-lightning>=2.1.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "shap>=0.43.0",
    "tensorboard>=2.15.0",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "transformers>=4.35.0",
    "uvicorn[standard]>=0.24.0",
    "wandb>=0.16.0",
]
